# systemd-parser

./: .gitignore  .gitmodules  Cargo.toml  Justfile  devbox.json
lib/: Cargo.toml
lib/benches/: afterparse.rs
lib/examples/: directory.rs  dropins.rs  example.rs  example.unit  patch.rs  patch.unit  specifiers.rs  subdir.rs  template.rs
lib/examples/dropins/: foo-bar-baz.service
lib/examples/dropins/foo-.service.d/: f1.conf
lib/examples/units/: 1.unit  2.unit
lib/src/: calender_events.rs  config.rs  datetime.pest  datetime.rs  duration.rs  error.rs  escape.rs  internal.rs  lib.rs  parser.rs  prelude.rs  specifiers.rs  template.rs  unit.pest
macro/: Cargo.toml
macro/examples/: example.rs
macro/src/: attribute.rs  entry.rs  lib.rs  section.rs  transform_default.rs  type_transform.rs  unit.rs
macro/test/: example.rs
src/: bin.rs  lib.rs  unit.pest
test/: NetworkManager.service  ShouldFail.service
