[package]
name = "systemd_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "systemd_parser"
path = "src/lib.rs"

[[bin]]
name = "systemd_parser_cli"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
pest = "2.7.0"
pest_derive = "2.7.0"
snafu = "0.7.4"
sysmaster = { path = "sysmaster" }
